--- a/tokisaki-starter/src/main/resources/application.yml
+++ b/tokisaki-starter/src/main/resources/application.yml
@@ -26,6 +26,12 @@ quarkus:
     url: http://localhost:9000
     access-key: minioadmin
     secret-key: minioadmin
+smallrye:
+  jwt:
+    sign:
+      key: privateKey.pem
+#    encrypt:
+#      key: publicKey.pem
 mp:
   jwt:
     verify:
