fix: 优化微信公众号口令登陆

--- a/tokisaki-starter/src/main/resources/application.yml
+++ b/tokisaki-starter/src/main/resources/application.yml
@@ -29,9 +29,8 @@ quarkus:
 smallrye:
   jwt:
     sign:
-      key: privateKey.pem
-#    encrypt:
-#      key: publicKey.pem
+      key:
+        location: privateKey.pem
 mp:
   jwt:
     verify:
