--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.5.2
 org.gradle.jvmargs=-Xmx1g
-#kapt.include.compile.classpath=false
+kapt.include.compile.classpath=false
