--- a/tokisaki-starter/src/main/resources/application.yml
+++ b/tokisaki-starter/src/main/resources/application.yml
@@ -4,9 +4,9 @@ quarkus:
   log:
     level: INFO
     min-level: TRACE
-    category:
-      "org.hibernate.orm.jdbc.bind":
-        level: TRACE
+#    category:
+#      "org.hibernate.orm.jdbc.bind":
+#        level: TRACE
   http:
     cors:
       ~: true
