--- a/tokisaki-starter/src/main/resources/application.yml
+++ b/tokisaki-starter/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 quarkus:
   banner:
     path: tokisaki.txt
+  application:
+    name: tokisaki
   log:
     level: INFO
     min-level: TRACE
@@ -15,6 +17,13 @@ quarkus:
       access-control-allow-credentials: true
     access-log:
       enabled: true
+  rest-client:
+    midjourney:
+      read-timeout: 900000
+    chat:
+      read-timeout: 900000
+    xyz:
+      follow-redirects: true
   datasource:
     db-kind: postgresql
     username: postgres
@@ -32,6 +41,8 @@ quarkus:
     url: http://localhost:9000
     access-key: minioadmin
     secret-key: minioadmin
+  package:
+    type: uber-jar # 打包über-jar
 smallrye:
   jwt:
     sign:
