:art: feat: 优化配置文件

--- a/tokisaki-starter/src/main/resources/application-prod.yml
+++ b/tokisaki-starter/src/main/resources/application-prod.yml
@@ -4,13 +4,13 @@ quarkus:
     username: postgres
     password: root
     reactive:
-      url: vertx-reactive:postgresql://localhost:5432/Tokisaki
+      url: vertx-reactive:postgresql://host.docker.internal:5432/Tokisaki
   hibernate-orm:
     database:
       generation: none
   redis:
-    hosts: redis://localhost:6379
+    hosts: redis://host.docker.internal:6379
   minio:
-    url: http://localhost:9000
+    url: http://host.docker.internal:9000
     access-key: minioadmin
     secret-key: minioadmin
